# waste_classifier_mobilenetv2

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
.gradio/flagged/: dataset1.csv
models/: labels.txt
notebooks/: workbook.ipynb
src/: image_capture.py  image_preprocessing.py  model_inference.py  utils.py
tests/: test_system.py
